--- a/index.html
+++ b/index.html
@@ -225,15 +225,34 @@ hr.rule{border:none;border-top:1px solid var(--rule);}
 /* ── HISTORY ── */
 #history{background:var(--off);}
 .history-intro{font-size:18px;line-height:1.8;color:#444440;max-width:640px;margin-bottom:48px;}
-.timeline{position:relative;padding-left:32px;}
-.timeline::before{content:'';position:absolute;left:6px;top:0;bottom:0;width:1px;background:var(--rule);}
-.tl-era{margin-bottom:40px;}
-.tl-dot{position:absolute;left:0;width:13px;height:13px;border-radius:50%;background:var(--white);border:2px solid var(--ink);margin-top:4px;}
-.tl-year{font-family:var(--ff-mono);font-size:13px;letter-spacing:.1em;color:var(--mid);margin-bottom:6px;font-weight:500;}
-.tl-title{font-family:var(--ff-serif);font-size:20px;letter-spacing:-.01em;margin-bottom:6px;color:var(--ink);}
-.tl-body{font-size:15px;line-height:1.75;color:#555550;}
-.tl-tags{display:flex;gap:6px;flex-wrap:wrap;margin-top:8px;}
-.tl-tag{font-family:var(--ff-mono);font-size:10px;padding:3px 10px;border:1px solid var(--rule);border-radius:100px;color:var(--mid);background:var(--white);}
+.ts-card{background:var(--white);border:2px solid var(--rule);border-radius:16px;padding:40px 44px;margin-bottom:44px;transition:box-shadow .2s;}
+.ts-card:hover{box-shadow:0 4px 20px rgba(0,0,0,.06);}
+.ts-card-year{font-family:var(--ff-serif);font-size:clamp(64px,9vw,108px);line-height:.9;letter-spacing:-.03em;color:var(--black);margin-bottom:14px;}
+.ts-card-era{font-family:var(--ff-mono);font-size:11px;letter-spacing:.16em;text-transform:uppercase;color:var(--mid);margin-bottom:10px;}
+.ts-card-title{font-family:var(--ff-serif);font-size:clamp(20px,2.8vw,30px);letter-spacing:-.01em;color:var(--ink);margin-bottom:12px;line-height:1.15;}
+.ts-card-body{font-size:15px;line-height:1.8;color:#555550;max-width:700px;}
+.ts-tags{display:flex;gap:6px;flex-wrap:wrap;margin-top:16px;}
+.ts-tag{font-family:var(--ff-mono);font-size:10px;padding:3px 10px;border:1px solid var(--rule);border-radius:100px;color:var(--mid);background:var(--off);}
+.ts-scrubber{user-select:none;-webkit-user-select:none;padding:0 10px;}
+.ts-year-bar{position:relative;height:22px;margin-bottom:6px;}
+.ts-year-lbl{position:absolute;font-family:var(--ff-mono);font-size:10px;letter-spacing:.05em;color:var(--mid);transform:translateX(-50%);}
+.ts-year-lbl:first-child{transform:none;}
+.ts-year-lbl:last-child{transform:translateX(-100%);}
+.ts-track-outer{position:relative;height:40px;display:flex;align-items:center;}
+.ts-track{position:relative;width:100%;height:3px;background:var(--rule);border-radius:2px;cursor:pointer;}
+.ts-fill{position:absolute;left:0;top:0;height:100%;background:var(--ink);border-radius:2px;pointer-events:none;}
+.ts-mdot{position:absolute;top:50%;width:10px;height:10px;border-radius:50%;background:var(--off);border:2px solid var(--rule);cursor:pointer;transition:all .15s;z-index:1;transform:translate(-50%,-50%);}
+.ts-mdot.on{background:var(--ink);border-color:var(--ink);}
+.ts-mdot:hover:not(.on){border-color:var(--ink);}
+.ts-handle{position:absolute;top:50%;width:22px;height:22px;border-radius:50%;background:var(--black);border:3px solid var(--white);box-shadow:0 1px 8px rgba(0,0,0,.25);cursor:grab;z-index:2;transform:translate(-50%,-50%);touch-action:none;}
+.ts-handle:active{cursor:grabbing;outline:none;}
+.ts-handle:focus-visible{outline:2px solid var(--ink);outline-offset:3px;}
+.ts-nav{display:none;align-items:center;justify-content:center;gap:20px;margin-top:28px;}
+@media(max-width:600px){.ts-nav{display:flex;}.ts-card{padding:28px 22px;}}
+.ts-nbtn{font-family:var(--ff-mono);font-size:12px;letter-spacing:.06em;padding:9px 22px;border:1.5px solid var(--rule);border-radius:100px;background:var(--white);color:var(--ink);cursor:pointer;transition:all .15s;}
+.ts-nbtn:hover:not([disabled]){border-color:var(--ink);}
+.ts-nbtn[disabled]{opacity:.3;cursor:default;}
+.ts-nctr{font-family:var(--ff-mono);font-size:11px;color:var(--mid);min-width:50px;text-align:center;}
 
 /* ── REGIONAL ── */
 #regional{background:var(--white);}
@@ -748,57 +767,7 @@ footer{background:var(--black);border-top:1px solid #111;padding:32px var(--pad)
     <h2 class="section-h2">How we got here:<br><em>AI in insurance since 2004.</em></h2>
     <p class="history-intro">Understanding where AI in insurance stands today requires knowing where it came from. Twenty years of evolution — from early statistical models to agentic systems — shows a field that has moved in waves, not straight lines.</p>
 
-    <div class="timeline">
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2004 – 2008 · The Statistical Foundation</div>
-        <div class="tl-title">Predictive modelling enters underwriting</div>
-        <div class="tl-body">Insurers begin using generalised linear models (GLMs) and early machine learning for pricing and risk segmentation. Personal auto leads adoption. The data is limited — largely internal — but the shift to algorithmic decision-making has begun.</div>
-        <div class="tl-tags"><span class="tl-tag">P&C · Auto</span><span class="tl-tag">GLM Pricing</span><span class="tl-tag">Americas</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2009 – 2012 · Telematics &amp; The Data Explosion</div>
-        <div class="tl-title">Usage-based insurance changes the risk equation</div>
-        <div class="tl-body">Telematics devices bring real-time behavioural data to auto insurance. Progressive's Snapshot, Aviva's Driveway, and others pioneer UBI. Meanwhile, the insurance data estate expands dramatically — creating the conditions for more sophisticated models.</div>
-        <div class="tl-tags"><span class="tl-tag">Telematics</span><span class="tl-tag">UBI</span><span class="tl-tag">P&C Auto</span><span class="tl-tag">Europe · Americas</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2013 – 2016 · Computer Vision &amp; Early NLP</div>
-        <div class="tl-title">Images and language start to matter</div>
-        <div class="tl-body">Deep learning breakthroughs (ImageNet 2012) begin flowing into insurance. Computer vision pilots for property damage assessment emerge. Early NLP tools tackle claims processing. Life insurers begin experimenting with accelerated underwriting using non-traditional data sources.</div>
-        <div class="tl-tags"><span class="tl-tag">Computer Vision</span><span class="tl-tag">Claims</span><span class="tl-tag">Life Underwriting</span><span class="tl-tag">Global</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2017 – 2019 · The Insurtech Wave</div>
-        <div class="tl-title">Challenger models and real deployment at scale</div>
-        <div class="tl-body">Lemonade, Root, Hippo, and dozens of insurtech challengers bring AI-first operating models to market. Established carriers accelerate digital transformation. Cat modelling firms begin integrating satellite imagery and ML. The reinsurance market starts tracking AI risk.</div>
-        <div class="tl-tags"><span class="tl-tag">Insurtech</span><span class="tl-tag">AI-first Carriers</span><span class="tl-tag">Cat Modelling</span><span class="tl-tag">Global</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2020 – 2022 · Pandemic Acceleration &amp; Foundation Models</div>
-        <div class="tl-title">Remote underwriting and the LLM era begins</div>
-        <div class="tl-body">COVID-19 forces rapid digitalisation. Remote claims inspection goes from exception to norm. Foundation models (GPT-3, 2020) capture insurance imagination. Life insurers move to fully digital underwriting. Parametric insurance products proliferate as climate risk rises.</div>
-        <div class="tl-tags"><span class="tl-tag">Remote Claims</span><span class="tl-tag">Foundation Models</span><span class="tl-tag">Parametric</span><span class="tl-tag">Life Digital</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2023 – 2024 · Generative AI &amp; Agentic Systems</div>
-        <div class="tl-title">LLMs enter the enterprise — hype and reality collide</div>
-        <div class="tl-body">ChatGPT triggers an industry-wide GenAI conversation. Carriers experiment with LLMs for policy documents, claims narratives, and customer service. Agentic claims orchestration moves from concept to pilot. Regulatory frameworks (EU AI Act, NAIC guidance) begin to emerge. Null's role becomes critical.</div>
-        <div class="tl-tags"><span class="tl-tag">GenAI</span><span class="tl-tag">Agentic Claims</span><span class="tl-tag">EU AI Act</span><span class="tl-tag">Regulation</span></div>
-      </div>
-      <div class="tl-era" style="position:relative;">
-        <div class="tl-dot"></div>
-        <div class="tl-year">2025 – Present · Compound Intelligence</div>
-        <div class="tl-title">From point solutions to operating model transformation</div>
-        <div class="tl-body">The most advanced carriers are moving beyond isolated AI pilots to AI-native operating models. Agentic systems handle end-to-end claims workflows. LLMs are embedded in underwriting, distribution, and actuarial work. The gap between AI-native and traditional carriers is widening visibly.</div>
-        <div class="tl-tags"><span class="tl-tag">AIO</span><span class="tl-tag">Agentic Workflows</span><span class="tl-tag">Operating Model</span><span class="tl-tag">Global</span></div>
-      </div>
-    </div>
+    <div id="ts-wrap"></div>
   </div>
 </section>
 
@@ -1230,6 +1199,133 @@ async function init(){
 }
 
 init();
+
+// ── TIMELINE SCRUBBER ──
+(function(){
+  const MS=[
+    {year:2004,era:'2004 \u2013 2008 \u00b7 The Statistical Foundation',title:'Predictive modelling enters underwriting',body:'Insurers begin using generalised linear models (GLMs) and early machine learning for pricing and risk segmentation. Personal auto leads adoption. The data is limited \u2014 largely internal \u2014 but the shift to algorithmic decision-making has begun.',tags:['P&C \u00b7 Auto','GLM Pricing','Americas']},
+    {year:2009,era:'2009 \u2013 2012 \u00b7 Telematics & The Data Explosion',title:'Usage-based insurance changes the risk equation',body:'Telematics devices bring real-time behavioural data to auto insurance. Progressive\u2019s Snapshot, Aviva\u2019s Driveway, and others pioneer UBI. Meanwhile, the insurance data estate expands dramatically \u2014 creating the conditions for more sophisticated models.',tags:['Telematics','UBI','P&C Auto','Europe \u00b7 Americas']},
+    {year:2013,era:'2013 \u2013 2016 \u00b7 Computer Vision & Early NLP',title:'Images and language start to matter',body:'Deep learning breakthroughs (ImageNet 2012) begin flowing into insurance. Computer vision pilots for property damage assessment emerge. Early NLP tools tackle claims processing. Life insurers begin experimenting with accelerated underwriting using non-traditional data sources.',tags:['Computer Vision','Claims','Life Underwriting','Global']},
+    {year:2017,era:'2017 \u2013 2019 \u00b7 The Insurtech Wave',title:'Challenger models and real deployment at scale',body:'Lemonade, Root, Hippo, and dozens of insurtech challengers bring AI-first operating models to market. Established carriers accelerate digital transformation. Cat modelling firms begin integrating satellite imagery and ML. The reinsurance market starts tracking AI risk.',tags:['Insurtech','AI-first Carriers','Cat Modelling','Global']},
+    {year:2020,era:'2020 \u2013 2022 \u00b7 Pandemic Acceleration & Foundation Models',title:'Remote underwriting and the LLM era begins',body:'COVID-19 forces rapid digitalisation. Remote claims inspection goes from exception to norm. Foundation models (GPT-3, 2020) capture insurance imagination. Life insurers move to fully digital underwriting. Parametric insurance products proliferate as climate risk rises.',tags:['Remote Claims','Foundation Models','Parametric','Life Digital']},
+    {year:2023,era:'2023 \u2013 2024 \u00b7 Generative AI & Agentic Systems',title:'LLMs enter the enterprise \u2014 hype and reality collide',body:'ChatGPT triggers an industry-wide GenAI conversation. Carriers experiment with LLMs for policy documents, claims narratives, and customer service. Agentic claims orchestration moves from concept to pilot. Regulatory frameworks (EU AI Act, NAIC guidance) begin to emerge. Null\u2019s role becomes critical.',tags:['GenAI','Agentic Claims','EU AI Act','Regulation']},
+    {year:2025,era:'2025 \u2013 Present \u00b7 Compound Intelligence',title:'From point solutions to operating model transformation',body:'The most advanced carriers are moving beyond isolated AI pilots to AI-native operating models. Agentic systems handle end-to-end claims workflows. LLMs are embedded in underwriting, distribution, and actuarial work. The gap between AI-native and traditional carriers is widening visibly.',tags:['AIO','Agentic Workflows','Operating Model','Global']}
+  ];
+  const YMIN=2004,YMAX=2025;
+  function yp(y){return(y-YMIN)/(YMAX-YMIN)*100;}
+  let cur=0,drag=false;
+
+  const wrap=document.getElementById('ts-wrap');
+  if(!wrap)return;
+
+  // Card
+  const card=document.createElement('div');card.className='ts-card';
+  const yearEl=document.createElement('div');yearEl.className='ts-card-year';
+  const eraEl=document.createElement('div');eraEl.className='ts-card-era';
+  const titleEl=document.createElement('div');titleEl.className='ts-card-title';
+  const bodyEl=document.createElement('div');bodyEl.className='ts-card-body';
+  const tagsEl=document.createElement('div');tagsEl.className='ts-tags';
+  card.appendChild(yearEl);card.appendChild(eraEl);card.appendChild(titleEl);card.appendChild(bodyEl);card.appendChild(tagsEl);
+  wrap.appendChild(card);
+
+  // Scrubber container
+  const scr=document.createElement('div');scr.className='ts-scrubber';
+
+  // Year labels
+  const ybar=document.createElement('div');ybar.className='ts-year-bar';
+  [2004,2008,2012,2016,2020,2025].forEach(y=>{
+    const l=document.createElement('div');l.className='ts-year-lbl';
+    l.textContent=y;l.style.left=yp(y)+'%';
+    ybar.appendChild(l);
+  });
+  scr.appendChild(ybar);
+
+  // Track
+  const outer=document.createElement('div');outer.className='ts-track-outer';
+  const track=document.createElement('div');track.className='ts-track';track.setAttribute('tabindex','0');
+  const fill=document.createElement('div');fill.className='ts-fill';
+  track.appendChild(fill);
+
+  // Milestone dots
+  const dots=MS.map((m,i)=>{
+    const d=document.createElement('div');d.className='ts-mdot';
+    d.style.left=yp(m.year)+'%';
+    d.setAttribute('title',m.year+': '+m.title);
+    d.addEventListener('click',e=>{e.stopPropagation();go(i);});
+    track.appendChild(d);return d;
+  });
+
+  // Handle
+  const hdl=document.createElement('div');hdl.className='ts-handle';
+  hdl.setAttribute('tabindex','0');hdl.setAttribute('role','slider');
+  hdl.setAttribute('aria-valuemin',YMIN);hdl.setAttribute('aria-valuemax',YMAX);
+  track.appendChild(hdl);
+  outer.appendChild(track);scr.appendChild(outer);
+
+  // Mobile nav
+  const nav=document.createElement('div');nav.className='ts-nav';
+  const prev=document.createElement('button');prev.className='ts-nbtn';prev.textContent='\u2190 Prev';
+  const ctr=document.createElement('div');ctr.className='ts-nctr';
+  const next=document.createElement('button');next.className='ts-nbtn';next.textContent='Next \u2192';
+  nav.appendChild(prev);nav.appendChild(ctr);nav.appendChild(next);
+  scr.appendChild(nav);
+  wrap.appendChild(scr);
+
+  function go(i){
+    cur=Math.max(0,Math.min(MS.length-1,i));
+    const m=MS[cur],p=yp(m.year)+'%';
+    hdl.style.left=p;fill.style.width=p;
+    hdl.setAttribute('aria-valuenow',m.year);
+    yearEl.textContent=m.year;
+    eraEl.textContent=m.era;
+    titleEl.textContent=m.title;
+    bodyEl.textContent=m.body;
+    tagsEl.innerHTML='';
+    m.tags.forEach(t=>{const s=document.createElement('span');s.className='ts-tag';s.textContent=t;tagsEl.appendChild(s);});
+    dots.forEach((d,j)=>d.classList.toggle('on',j===cur));
+    ctr.textContent=(cur+1)+' / '+MS.length;
+    prev.disabled=cur===0;next.disabled=cur===MS.length-1;
+  }
+
+  prev.addEventListener('click',()=>go(cur-1));
+  next.addEventListener('click',()=>go(cur+1));
+
+  function pctFromX(clientX){
+    const r=track.getBoundingClientRect();
+    return Math.max(0,Math.min(100,(clientX-r.left)/r.width*100));
+  }
+  function nearest(pct){
+    let b=0,d=Infinity;
+    MS.forEach((m,i)=>{const dd=Math.abs(yp(m.year)-pct);if(dd<d){d=dd;b=i;}});
+    return b;
+  }
+
+  hdl.addEventListener('mousedown',e=>{drag=true;e.preventDefault();});
+  hdl.addEventListener('touchstart',e=>{drag=true;e.preventDefault();},{passive:false});
+  document.addEventListener('mousemove',e=>{
+    if(!drag)return;
+    const p=pctFromX(e.clientX);hdl.style.left=p+'%';fill.style.width=p+'%';
+  });
+  document.addEventListener('touchmove',e=>{
+    if(!drag)return;e.preventDefault();
+    const p=pctFromX(e.touches[0].clientX);hdl.style.left=p+'%';fill.style.width=p+'%';
+  },{passive:false});
+  document.addEventListener('mouseup',e=>{if(!drag)return;drag=false;go(nearest(pctFromX(e.clientX)));});
+  document.addEventListener('touchend',e=>{
+    if(!drag)return;drag=false;
+    go(nearest(pctFromX(e.changedTouches[0].clientX)));
+  });
+  track.addEventListener('click',e=>{if(drag)return;go(nearest(pctFromX(e.clientX)));});
+
+  function onKey(e){
+    if(e.key==='ArrowRight'||e.key==='ArrowUp'){e.preventDefault();go(cur+1);}
+    else if(e.key==='ArrowLeft'||e.key==='ArrowDown'){e.preventDefault();go(cur-1);}
+  }
+  hdl.addEventListener('keydown',onKey);
+  track.addEventListener('keydown',onKey);
+
+  go(0);
+})();
 </script>
 </body>
 </html>
