--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@ hr.rule{border:none;border-top:1px solid var(--rule);}
 .es-title{font-family:var(--ff-serif);font-size:26px;letter-spacing:-.01em;margin-bottom:10px;color:var(--ink);}
 .es-sub{font-size:16px;color:var(--mid);}
 
+/* ── MIND GROUPS ── */
+.mg{margin-bottom:20px;}
+.mg-head{display:flex;align-items:center;gap:12px;padding:14px 20px;background:var(--off);border:2px solid var(--rule);border-radius:12px;cursor:pointer;user-select:none;transition:border-color .15s;}
+.mg-head:hover{border-color:var(--mid);}
+.mg-head.open{border-bottom-left-radius:0;border-bottom-right-radius:0;border-color:var(--ink);}
+.mg-icon{font-size:18px;flex-shrink:0;}
+.mg-name{font-family:var(--ff-serif);font-size:17px;letter-spacing:-.01em;color:var(--ink);flex:1;}
+.mg-badges{display:flex;gap:5px;align-items:center;flex-wrap:wrap;}
+.mg-badge{font-family:var(--ff-mono);font-size:10px;letter-spacing:.08em;padding:3px 9px;border-radius:100px;font-weight:500;}
+.mg-badge.bs{background:var(--ink);color:var(--white);}
+.mg-badge.bw{background:#e0e0de;color:#333;}
+.mg-badge.bn{background:var(--off);color:var(--mid);border:1px solid var(--rule);}
+.mg-chevron{font-size:10px;color:var(--mid);transition:transform .2s;margin-left:4px;flex-shrink:0;}
+.mg-head.open .mg-chevron{transform:rotate(180deg);}
+.mg-body{border:2px solid var(--ink);border-top:none;border-radius:0 0 12px 12px;padding:16px;display:none;}
+.mg-head.open+.mg-body{display:block;}
+@media(max-width:600px){.mg-head{padding:12px 14px;}.mg-name{font-size:15px;}}
+
 /* ── TAXONOMY ── */
 .tax-wrap{margin-top:64px;padding-top:48px;border-top:2px solid var(--rule);}
 .tax-h3{font-family:var(--ff-serif);font-size:32px;letter-spacing:-.02em;margin-bottom:8px;color:var(--ink);}
@@ -1056,9 +1074,37 @@ function updatePathwayCounts(){
 }
 
 // ── RENDER CARDS ──
+function makeCard(f,idx){
+  const v=f.verdict||'WATCH';
+  const vc=v==='SIGNAL'?'vcs':v==='WATCH'?'vcw':'vcn';
+  const cs=v==='SIGNAL'?'cs':v==='NOISE'?'cn':'';
+  const region=inferRegion(f);
+  const rl=readinessLabel(f.trl||f.trl_score);
+  const conf=f.confidence||3;
+  const div=document.createElement('div');
+  div.className=`icard ${cs}`;
+  div.style.animationDelay=(idx*0.035)+'s';
+  div.onclick=()=>openModal(f);
+  div.innerHTML=`
+    <div class="ic-top"><span class="vc ${vc}">${v}</span><span class="ic-mind">${f.mindIcon||''} ${f.mindName||''}</span></div>
+    <div class="ic-tags">
+      <span class="ic-tag">${f.domain||''}</span>
+      ${f.subdomain?`<span class="ic-tag">${f.subdomain}</span>`:''}
+      <span class="ic-tag region">${region}</span>
+      <span class="ic-tag">${rl}</span>
+    </div>
+    <div class="ic-title">${f.title||''}</div>
+    <div class="ic-body">${(f.body||'').substring(0,180)}${(f.body||'').length>180?'…':''}</div>
+    <div class="ic-footer">
+      <span class="ic-readiness">${rl} · ${f.domain||''}</span>
+      <div class="ic-conf">${[1,2,3,4,5].map(n=>`<div class="ic-dot${n<=conf?' on':''}"></div>`).join('')}</div>
+    </div>`;
+  return div;
+}
+
 function refresh(){
   const g=document.getElementById('cardsGrid');
-  let filtered=insights.filter(f=>{
+  const filtered=insights.filter(f=>{
     const rl=readinessLabel(f.trl);
     if(domFilter!=='all'&&f.domain!==domFilter)return false;
     if(verdFilter!=='all'&&f.verdict!==verdFilter)return false;
@@ -1071,33 +1117,40 @@ function refresh(){
     return;
   }
   g.innerHTML='';
-  filtered.forEach((f,idx)=>{
-    const v=f.verdict||'WATCH';
-    const vc=v==='SIGNAL'?'vcs':v==='WATCH'?'vcw':'vcn';
-    const cs=v==='SIGNAL'?'cs':v==='NOISE'?'cn':'';
-    const region=inferRegion(f);
-    const rl=readinessLabel(f.trl||f.trl_score);
-    const conf=f.confidence||3;
-    const div=document.createElement('div');
-    div.className=`icard ${cs}`;
-    div.style.animationDelay=(idx*0.035)+'s';
-    div.onclick=()=>openModal(f);
-    div.innerHTML=`
-      <div class="ic-top"><span class="vc ${vc}">${v}</span><span class="ic-mind">${f.mindIcon||''} ${f.mindName||''}</span></div>
-      <div class="ic-tags">
-        <span class="ic-tag">${f.domain||''}</span>
-        ${f.subdomain?`<span class="ic-tag">${f.subdomain}</span>`:''}
-        <span class="ic-tag region">${region}</span>
-        <span class="ic-tag">${rl}</span>
-      </div>
-      <div class="ic-title">${f.title||''}</div>
-      <div class="ic-body">${(f.body||'').substring(0,180)}${(f.body||'').length>180?'…':''}</div>
-      <div class="ic-footer">
-        <span class="ic-readiness">${rl} · ${f.domain||''}</span>
-        <div class="ic-conf">${[1,2,3,4,5].map(n=>`<div class="ic-dot${n<=conf?' on':''}"></div>`).join('')}</div>
-      </div>`;
-    g.appendChild(div);
+  const mindOrder=['scout','vita','atlas','prism','null','weave','deploy','faro'];
+  const mindMap={};
+  filtered.forEach(f=>{const id=f.mindId||'other';if(!mindMap[id])mindMap[id]=[];mindMap[id].push(f);});
+  let anyGroup=false;
+  mindOrder.forEach(mid=>{
+    const mf=mindMap[mid];
+    if(!mf||!mf.length)return;
+    anyGroup=true;
+    const mind=MINDS.find(m=>m.id===mid)||{icon:'',name:mid};
+    const sig=mf.filter(f=>f.verdict==='SIGNAL').length;
+    const wat=mf.filter(f=>f.verdict==='WATCH').length;
+    const noi=mf.filter(f=>f.verdict==='NOISE').length;
+    let badges='';
+    if(sig)badges+=`<span class="mg-badge bs">${sig} SIGNAL</span>`;
+    if(wat)badges+=`<span class="mg-badge bw">${wat} WATCH</span>`;
+    if(noi)badges+=`<span class="mg-badge bn">${noi} NOISE</span>`;
+    const mg=document.createElement('div');mg.className='mg';
+    const head=document.createElement('div');head.className='mg-head open';
+    head.innerHTML=`<span class="mg-icon">${mind.icon}</span><span class="mg-name">${mind.name}</span><div class="mg-badges">${badges}</div><span class="mg-chevron">▼</span>`;
+    head.onclick=()=>head.classList.toggle('open');
+    const body=document.createElement('div');body.className='mg-body';
+    const cards=document.createElement('div');cards.className='cards';
+    mf.forEach((f,i)=>cards.appendChild(makeCard(f,i)));
+    body.appendChild(cards);mg.appendChild(head);mg.appendChild(body);g.appendChild(mg);
   });
+  // any findings from minds not in the order list
+  const other=(mindMap['other']||[]).concat(mindOrder.reduce((acc,mid)=>{return acc;},[...Object.keys(mindMap).filter(k=>!mindOrder.includes(k)&&k!=='other').flatMap(k=>mindMap[k])]));
+  if(other.length){
+    const mg=document.createElement('div');mg.className='mg';
+    const body=document.createElement('div');body.className='mg-body';body.style.display='block';
+    const cards=document.createElement('div');cards.className='cards';
+    other.forEach((f,i)=>cards.appendChild(makeCard(f,i)));
+    body.appendChild(cards);mg.appendChild(body);g.appendChild(mg);
+  }
 }
 
 // ── MODAL ──
