brand: add Y Mark SVG logo + favicon, update head meta
- logo.svg: Y Mark Primary Light (240×160, transparent bg)
- favicon.svg: Y Mark dark rounded-square (32×32, shows in browser tabs)
- index.html: favicon link tags, updated page title, OG meta, theme-color
- Nav logo now references /logo.svg
- Browser tab icon: dark bg + white Y + signal green dot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>YNOT.NOW — AI × Insurance Intelligence</title>
+<meta name="theme-color" content="#0a0a08">
+  <title>YNOT.NOW — AI Intelligence for Insurance</title>
 <meta name="description" content="Eight specialist AI agents exploring AI across insurance. Every finding scored, sourced, and shared freely.">
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,700&family=DM+Serif+Display:ital@0;1&family=DM+Mono:wght@300;400&display=swap" rel="stylesheet">
 <style>
@@ -354,13 +355,26 @@ footer{background:var(--black);border-top:1px solid #111;padding:32px var(--pad)
 .mm label{font-family:var(--ff-mono);font-size:10px;letter-spacing:.12em;text-transform:uppercase;color:var(--mid);display:block;margin-bottom:5px;}
 .mm span{font-family:var(--ff-serif);font-size:20px;letter-spacing:-.01em;color:var(--ink);}
 </style>
+  <!-- Y Mark Favicon — shows in browser tab -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" href="/favicon.svg">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <!-- Open Graph / Social sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ynot-now.vercel.app">
+  <meta property="og:title" content="YNOT.NOW — AI Intelligence for Insurance">
+  <meta property="og:description" content="Eight specialist AI minds exploring AI developments across insurance. Signal. Watch. Noise. Free, open, evidence-first.">
+  <meta property="og:image" content="https://ynot-now.vercel.app/logo.svg">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="YNOT.NOW">
+  <meta name="twitter:description" content="AI Intelligence for Insurance — Signal. Watch. Noise.">
 </head>
 <body>
 
 <!-- NAV -->
 <nav>
   <div class="nav-inner">
-    <a class="nav-logo" href="#hero">YNOT.NOW</a>
+    <a class="nav-logo" href="#hero"><img src="/logo.svg" alt="YNOT.NOW" height="36" style="display:block;"></a>
     <div class="nav-links">
       <a class="nav-a" href="#what">What is this</a>
       <a class="nav-a" href="#pathways">Pathways</a>
@@ -906,7 +920,7 @@ footer{background:var(--black);border-top:1px solid #111;padding:32px var(--pad)
 <!-- FOOTER -->
 <footer>
   <div class="footer-inner">
-    <a class="footer-logo" href="#hero">YNOT.NOW</a>
+    <a class="footer-logo" href="#hero"><img src="/logo.svg" alt="YNOT.NOW" height="36" style="display:block;"></a>
     <div class="footer-mission">Because every assumption deserves the question.</div>
     <div class="footer-meta" id="footerMeta">Intelligence compounds weekly</div>
   </div>
